--- a/contact.html
+++ b/contact.html
@@ -68,10 +68,10 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="https://s3-us-west-2.amazonaws.com/ylfr/ylfr_logo.jpg" width="400" height="200">
+          <img src="https://s3-us-west-2.amazonaws.com/ylfr/ylfr_logo.jpg" width="300" height="150">
         </div>
         <div class="col-md-6">
-          <h3>Contact YLFR</h3>
+          <h3>General Inquiries</h3>
           <p>Youth Life Foundation of Richmond</p>
           <p>Send all mail to:</p>
           <p>P.O. Box 15202</p>
@@ -80,11 +80,58 @@
       <div class="row">
         <div class="col-md-6">
           <h3>Learning Centers</h3>
-          <h4>Delmont Learning Center</h4>
+          <h4>A - Delmont Learning Center</h4>
           <phone>804-228-1620</phone>
           <address>3800 Delmont Street<br>
-                   Richmond, VA</br>
+                   Richmond, VA<br>
           </address>
+
+          <h4>B - Highland Park Learning Center</h4>
+          <phone>804-321-3182</phone>
+          <address>3076 Meadowbridge Road<br>
+                   Richmond, VA<br>
+          </address>
+
+          <h4>C - LC Remix at Northminster Church</h4>
+          <phone>804-514-8504</phone>
+          <address>3121 Moss Side Avenue<br>
+                   Richmond, VA<br>
+          </address>
+
+      <div id="map_canvas" style="width:425px; height:350px"></div> 
+
+      <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
+      <script type="text/javascript"> 
+
+        var map;
+        var markers = [];
+
+        initialize();
+
+        function initialize() {
+          var myOptions = {
+            zoom: 14,
+            center: new google.maps.LatLng(37.577, -77.429),
+            mapTypeId: google.maps.MapTypeId.ROADMAP
+          }
+          map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+
+          addMarker(new google.maps.LatLng(37.5835210, -77.42920300000003), "Delmont");
+          addMarker(new google.maps.LatLng(37.5716838, -77.41945140000001), "Highland Park");
+          addMarker(new google.maps.LatLng(37.5771880, -77.44013089999999), "LC Remix");
+
+        }
+
+        function addMarker(latlng, myTitle) {
+          markers.push(new google.maps.Marker({
+            position: latlng, 
+            map: map,
+            title: myTitle,
+            icon: "http://maps.google.com/mapfiles/marker" + String.fromCharCode(markers.length + 65) + ".png"
+          }));    
+        }
+       </script>
+
         </div>
         <div class="col-md-6">
           <h3>Key Leaders</h3>
@@ -94,6 +141,7 @@
       </div>
     </div>
 
+    <div>
       <hr class="featurette-divider">
 
       <footer>
@@ -116,4 +164,3 @@
 
   </body>
 </html>
-
