--- a/bootstrap.html
+++ b/bootstrap.html
@@ -34,13 +34,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">YLFR</a>
+              <a class="navbar-brand" href="index.html">YLFR</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-         
+                <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="donate.html">Donate</a></li>
                 <li class="dropdown">
@@ -67,13 +66,13 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-5">
           <img src="https://s3-us-west-2.amazonaws.com/ylfr/ylfr_logo.jpg" width="400" height="200">
         </div>
-        <div class="col-md-6">
-          <h3>Our Mission</h3>
-          <p>To operate Learning Centers to develop leaders by making long-term investments in children from at-risk communities.</p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <div class="col-md-7">
+          <h2>Our Mission</h2>
+          <p class="lead">To operate Learning Centers to develop leaders by making long-term investments in children from at-risk communities.</p>
+          <p><a class="btn btn-primary btn-lg" href="about.html" role="button">Learn more &raquo;</a></p>
         </div>
       </div>
     </div>
