updates to programs tab

--- a/about.html
+++ b/about.html
@@ -82,6 +82,7 @@
           <p>
             <span>The first Youth Life Foundation of Richmond Learning Center began operating in the Delmont Plaza Apartments, a government-subsidized community in eastern Henrico County, in July 2003.</span>
           </p>
+          <img class="featurette-image img-responsive" src="https://s3-us-west-2.amazonaws.com/ylfr/kids_group_photo.jpg" alt="Group Photo">
           <p>
             <span>Heather Goodlett, the founder was a Title One Reading teacher at Glen Lea Elementary School.  She desired to develop a program that could make a long-term </span>
             <span>commitment to help the children and their families, and ultimately rebuild their community.  With the help of the owners of Delmont Plaza Apartments </span>
@@ -106,6 +107,7 @@
             <span>does not always exist for these children, leaving them unmotivated to set goals and work towards their dreams. YLFR addresses these overarching issues by making a long-term commitment to the </span>
             <span>children and their families to nurture skills and behaviors that positively impact their future. Our after-school model aims to treat the children as individuals to help them overcome obstacles, succeed in life, and become leaders in changing their communities.</span>
           </p>
+          <img class="featurette-image img-responsive" src="https://s3-us-west-2.amazonaws.com/ylfr/two_friends_smiling.jpg" alt="Friends Smiling">
           <p>
             <span>On September 8,2008, we opened our second Learning Center program in Highland Park. The new Center is located at 3076 Meadowbridge Road in the Northside of Richmond City. The opening of this Center has been a collaborative </span>
             <span>effort with the Northside Outreach Center. Butch Johnson, the Executive Director of NOC, grew up in Highland Park and has strong ties to the community there. All of our current students come from Overby-Sheppard Elementary, </span>
