--- a/after_school.html
+++ b/after_school.html
@@ -46,8 +46,8 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Programs<span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
-                    <li><a href="after_school.html">After School Learning</a></li>
-                    <li><a href="summer_programs.html">Summer Programs</a></li>
+                    <li><a href="#">After School Learning</a></li>
+                    <li><a href="#">Summer Programs</a></li>
                     <li><a href="#">Financial Literacy</a></li>
                     <li class="divider"></li>
                     <li class="dropdown-header">More</li>
@@ -79,80 +79,22 @@
       </div>
       <div class="row">
         <div class="col-md-6">
-          <h3>Learning Centers</h3>
-          <h4>A - Delmont Learning Center</h4>
-          <phone>804-228-1620</phone>
-          <address>3800 Delmont Street<br>
-                   Richmond, VA<br>
-          </address>
-
-          <h4>B - Highland Park Learning Center</h4>
-          <phone>804-321-3182</phone>
-          <address>3076 Meadowbridge Road<br>
-                   Richmond, VA<br>
-          </address>
-
-          <h4>C - LC Remix at Northminster Church</h4>
-          <phone>804-514-8504</phone>
-          <address>3121 Moss Side Avenue<br>
-                   Richmond, VA<br>
-          </address>
-
-      <div id="map_canvas" style="width:425px; height:350px"></div> 
-
-      <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
-      <script type="text/javascript"> 
-
-        var map;
-        var markers = [];
-
-        initialize();
-
-        function initialize() {
-          var myOptions = {
-            zoom: 14,
-            center: new google.maps.LatLng(37.577, -77.429),
-            mapTypeId: google.maps.MapTypeId.ROADMAP
-          }
-          map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
-
-          addMarker(new google.maps.LatLng(37.5835210, -77.42920300000003), "Delmont");
-          addMarker(new google.maps.LatLng(37.5716838, -77.41945140000001), "Highland Park");
-          addMarker(new google.maps.LatLng(37.5771880, -77.44013089999999), "LC Remix");
-
-        }
-
-        function addMarker(latlng, myTitle) {
-          markers.push(new google.maps.Marker({
-            position: latlng, 
-            map: map,
-            title: myTitle,
-            icon: "http://maps.google.com/mapfiles/marker" + String.fromCharCode(markers.length + 65) + ".png"
-          }));    
-        }
-       </script>
-
+          <h3>After-school Learning Center: K-12</h3>
+          <p>
+            <span>The Youth Life Learning Center provides a safe and structured environment for children after school. Certified teachers and trained volunteer mentors instruct </span>
+            <span>the children daily from 2:30 PM-6:00 PM to encourage the children's ability to complete their homework successfully and strengthen their academic skills. A </span>
+            <span>character development curriculum is also implemented daily to teach the children good citizenship and develop essential core values. In addition, weekly field trips and guest speaker events, known as Fun Fridays, provide experiential </span>
+            <span>learning and give the children a view of the world beyond their neighborhood which nurtures a vision of their place in the larger community.</span>
+          </p><br>
+          <p>
+            <span>A unique aspect in our approach to providing an after-school mentoring program is our certified teachers. These teachers implement structured academic learning </span>
+            <span>plans, coordinate field trips and recreational activities, and overall, provide a strong support network for the children. Maintaining our low student-to-teacher </span>
+            <span>ratio and one-on-one mentoring relationships ensures adequate attention to each child throughout the school year. Our desire is not just for the children to </span>
+            <span>improve, but for them to achieve academic excellence and develop strong leadership qualities. Our teachers and volunteer mentors are the driving force behind our mission.</span>
+          </p><br>
         </div>
         <div class="col-md-6">
-          <h3>Key Contacts</h3>
-          <h4>Founder and Executive Director</h4>
-          <p>Heather Goodlett</p>
-          <p><a href="mailto:hgoodlett@ylfr.org">hgoodlett@ylfr.org</a><p>
-          <br>
-          <h4>Volunteer Coordinator</h4>
-          <p>mentor@ylfr.org</p>
-          <br>
-          <h4>Delmont Program Director</h4>
-          <p>Whitney Prusek<br>
-          <a href="mailto:wprusek@ylfr.org">wprusek@ylfr.org</a></p>
-          <br>
-          <h4>Highland Park Program Director</h4>
-          <p>Leahna Sullilvan</p>
-          <p>lsullivan@ylfr.org</p>
-          <br>
-          <h4>LC Remix Program Director</h4>
-          <p>Katharine Hunt</p>
-          <p>khunt@ylfr@org<p>
+          <img class="featurette-image img-responsive" src="https://s3-us-west-2.amazonaws.com/ylfr/kids_studying.jpg" alt="Students Studying">
         </div>
       </div>
 
