--- a/donate.html
+++ b/donate.html
@@ -34,20 +34,20 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">YLFR</a>
+              <a class="navbar-brand" href="index.html">YLFR</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
 
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#donate">Donate</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="donate.html">Donate</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Programs<span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">After School Learning</a></li>
-                    <li><a href="#">Summer Programs</a></li>
+                    <li><a href="after_school.html">After School Learning</a></li>
+                    <li><a href="summer_programs.html">Summer Programs</a></li>
                     <li><a href="#">Financial Literacy</a></li>
                     <li class="divider"></li>
                     <li class="dropdown-header">More</li>
@@ -65,9 +65,7 @@
     </div>
 
 
-    <div>
-      <hr class="featurette-divider">
-
+    <div class="container">
       <div class="row featurette">
         <div class="col-md-8">
           <img class="featurette-image img-responsive" src="https://s3-us-west-2.amazonaws.com/ylfr/northminster_fundraise.jpg" alt="Donate image">
@@ -101,9 +99,7 @@
 
         </div>
       </div>
-    </div>
 
-    <div>
       <hr class="featurette-divider">
 
       <footer>
