--- a/bootstrap.html
+++ b/bootstrap.html
@@ -45,8 +45,8 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Programs<span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">After School Learning</a></li>
-                    <li><a href="#">Summer Programs</a></li>
+                    <li><a href="after_school.html">After School Learning</a></li>
+                    <li><a href="summer_program.html">Summer Programs</a></li>
                     <li><a href="#">Financial Literacy</a></li>
                     <li class="divider"></li>
                     <li class="dropdown-header">More</li>
@@ -101,7 +101,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Our Volunteers</h1>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <p><a class="btn btn-lg btn-primary" href="get_involved.html" role="button">Get Involved</a></p>
             </div>
           </div>
         </div>
