--- a/about.html
+++ b/about.html
@@ -71,6 +71,8 @@
         <div class="col-md-7">
           <h2 class="featurette-heading">Our Mission</h2>
           <p class="lead">To operate Learning Centers to develop leaders by making long-term investments in children from at-risk communities.</p>
+          <h2 class="featurette-heading">Our Vision</h2>
+          <p class="lead">To nuture the child, strengthen the family, and rebuild the community.  We hope to replicate our Learning Center model in many Richmond communities.</p>
         </div>
       </div>
       <div class="row featurette">
@@ -82,7 +84,7 @@
           <p>
             <span>The first Youth Life Foundation of Richmond Learning Center began operating in the Delmont Plaza Apartments, a government-subsidized community in eastern Henrico County, in July 2003.</span>
           </p>
-          <img class="featurette-image img-responsive" src="https://s3-us-west-2.amazonaws.com/ylfr/kids_group_photo.jpg" alt="Group Photo">
+          <img class="featurette-image img-responsive" src="https://s3-us-west-2.amazonaws.com/ylfr/kids_group_photo.jpg" alt="Group Photo"><br>
           <p>
             <span>Heather Goodlett, the founder was a Title One Reading teacher at Glen Lea Elementary School.  She desired to develop a program that could make a long-term </span>
             <span>commitment to help the children and their families, and ultimately rebuild their community.  With the help of the owners of Delmont Plaza Apartments </span>
@@ -107,13 +109,43 @@
             <span>does not always exist for these children, leaving them unmotivated to set goals and work towards their dreams. YLFR addresses these overarching issues by making a long-term commitment to the </span>
             <span>children and their families to nurture skills and behaviors that positively impact their future. Our after-school model aims to treat the children as individuals to help them overcome obstacles, succeed in life, and become leaders in changing their communities.</span>
           </p>
-          <img class="featurette-image img-responsive" src="https://s3-us-west-2.amazonaws.com/ylfr/two_friends_smiling.jpg" alt="Friends Smiling">
+          <img class="featurette-image img-responsive" src="https://s3-us-west-2.amazonaws.com/ylfr/two_friends_smiling.jpg" alt="Friends Smiling"><br>
           <p>
             <span>On September 8,2008, we opened our second Learning Center program in Highland Park. The new Center is located at 3076 Meadowbridge Road in the Northside of Richmond City. The opening of this Center has been a collaborative </span>
             <span>effort with the Northside Outreach Center. Butch Johnson, the Executive Director of NOC, grew up in Highland Park and has strong ties to the community there. All of our current students come from Overby-Sheppard Elementary, </span>
             <span>where 85% of the students are eligible for the federal school lunch program. With a growing waiting list of students, our immediate goal is to expand this facility to double the number of students served.</span>
           </p> 
        </div>
+      </div>
+      <div class="row featurette">
+        <div class="col-md-6">
+          <h2 class="featurette-heading">Goals</h2>
+          <p>
+            <span>We accomplish our mission through neighborhood-based after-school and summer programs that cultivate academic success, character development, computer training </span>
+            <span>and health and wellness in children.  Additionally, we provide programs that strengthen the families in the communities where we serve.</span><br>
+            <span></span><br>
+            <span>The Learning Center programs are designed to produce excellence in every aspect of the children's lives.  One of the program's primary goals centers on academic </span>
+            <span>excellence and achieving specific academic goals for each student.</span><br>
+            <span></span><br>
+            <span>Character development, the second program goal, is emphasized alongside academics.  The staff and volunteers utilize a nationwide curriculum called Character First! </span>
+            <span>the gives the children an understanding of 49 character qualities.  YLFR also utilizes the Judeo-Christian Bible as an optional part of the curriculum to provide further </span>
+            <span>guidance in moral development.  Parents are notified of this aspect of the character-building program and given the option upon registration of having their child </span>
+            <span>participate in alternative lessons in character development.</span><br>
+            <span></span><br>
+            <span>The third goal of the Learning center focuses on computer skills development in order to equip students for future careers.  Most of the students neither own home </span>
+            <span>computers nor have access to computers at public libraries.  Volunteers provide children with computer training sessions to help them complete projects, prepare homework </span>
+            <span>assignments, write papers, and facilitate other education challenges.</span><br>
+            <span></span></br>
+            <span>The fourth goal, Health and Wellness instruction is also a key component of the Learning Center program.  Healthy eating habits and physical activity are stressed.  </span>
+            <span>Nutritious snacks are provided on a daily basis and students participate in physical activity at least four days a week.</span>
+          </p>
+        </div>
+        <div class="col-md-6">
+          <h2 class="featurette-heading">Success Stories</h2>
+          <p>How are the students doing?  Here are some examples of improvements we've seen through the program</p>
+          <p><a class="btn btn-primary btn-lg" href="success.html" role="button">Learn more &raquo;</a></p>
+          <img class="featurette-image img-responsive" src="https://s3-us-west-2.amazonaws.com/ylfr/male_student_smile.jpg" alt="Smile">
+        </div>
       </div>
 
       <hr class="featurette-divider">
