--- a/bootstrap.html
+++ b/bootstrap.html
@@ -92,7 +92,7 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>Our Students</h1>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <p><a class="btn btn-lg btn-primary" href="about.html" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
@@ -134,20 +134,20 @@
           <p><br></p>
           <p><b>Directors Message</b></p>
           <p>Dear Team<br></p>
-          <p>It has been exciting this past month to take people on tour through the Learning Centers.  On Tuesdays, I love going thorugh our Northminster...</p>
-          <p><a class="btn btn-default" href="#" role="button">View full story &raquo;</a></p>
+          <p>Happy Thanksgiving!  I feel like I have a lot to be thankful for this year.  My family now lives...</p>
+          <p><a class="btn btn-default" href="directors_message.html" role="button">View full story &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Child Spotlight</h2>
           <img src="http://www.ylfr.org/images/Calvin.jpg" width="200" class="img-circle" alt="Calvin">
           <p>Calvin is one of our oldest students to join the new Learning Center.  Since the beginning of the summer, Calvin was closely...</p>
-          <p><a class="btn btn-default" href="#" role="button">View full story &raquo;</a></p>
+          <p><a class="btn btn-default" href="child_spotlight.html" role="button">View full story &raquo;</a></p>
        </div>
         <div class="col-md-4">
           <h2>Get Involved</h2>
           <img src="http://www.ylfr.org/images/ginger.jpg" width="200" class="img-circle" alt="Ginger">
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p>There are many ways you can help YLFR, including mentoring a child, being a guest speaker to one of the sites, or by donating - potentially leveraging one of the matching programs through your company.</p>
+          <p><a class="btn btn-default" href="get_involved.html" role="button">View details &raquo;</a></p>
         </div>
       </div>
 
