--- a/child_spotlight.html
+++ b/child_spotlight.html
@@ -69,45 +69,30 @@
           <img class="featurette-image img-responsive" src="https://s3-us-west-2.amazonaws.com/ylfr/ylfr_logo.jpg" alt="Donate image">
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">Ways to Give</h2>
-          <p class="lead">Become an ongoing financial partner or make a donation via Paypal or a check made out to "Youth Life Foundation of Richmond.</p>
-          <p><a class="btn btn-primary btn-lg" href="donate.html" role="button">Donate &raquo;</a></p>
+          <h2 class="featurette-heading">Our Mission</h2>
+          <p class="lead">To operate Learning Centers to develop leaders by making long-term investments in children from at-risk communities.</p>
         </div>
       </div>
       <div class="row featurette">
         <div class="col-md-6">
-          <h2 class="featurette-heading">Matching Programs</h2>
+          <h2 class="featurette-heading">Child Spotlight</h2>
           <p>
-            <span>Every donation amount is welcome and appreciated.  Thank you for partnering with us to provide a brighter future for children in at-risk communities.  You can also give through our employee matching partners:</span></p>
-            <span>Central Virginia Area Combined Federal Campaign - Our Code #79417</span><br>
-            <span>Local Government and Schools United Way Campaign - YLFR 393 Code</span><br>
-            <span>Dominion Foundation Matching Gift Program</span><br>
-            <span>Microsoft Matching Gift Program</span><br>
-            <span>Bank of America Employee Giving Program</span><br>
+            <span>Calvin is one of our oldest students to join the new Learning Center.  Since the beginning of the summer, Calvin was closely following the progress of the center </span>
+            <span>coming together and was highly anticipating its opening!  Now that the program has started, we asked Calvin to share a bit about himself and why he was looking </span>
+            <span>forward to joining the Youth Life program.</span><br>
+            <span></span><br>
+            <span>Calvin, a fan of chocolate chip ice cream and pizza, is in the 5th grade at J.E.B. Stuart Elementary School.  He admits that when he first heard about Youth Life, </span>
+            <span>he just knew that it sounded fun, but didn't know anything else about it.  He was excited about the ideas of the Fun Friday trips and the Mystery Trip!  </span>
+            <span>Now that Calvin is in the program, he has quickly become a leader among his peers.  Without hesitancy, he follows the Learning Center rules and helps look </span>
+            <span>out for the younger students.  Although he did not know a number of the students, Calvin began joking with them on the bus and playing football </span>
+            <span>with them at recess on the first day.  He is beginning to see that the Learning Center cound benefit him to reach his future goal as a basketball player, </span>
+            <span>by "teaching me how to focus."</span><br>
           </p>
+          <img class="featurette-image img-responsive" src="https://s3-us-west-2.amazonaws.com/ylfr/kids_group_photo.jpg" alt="Group Photo">
         </div>
         <div class="col-md-6">
-          <h2 class="featurette-heading">Mentor a Child</h2>
           <p>
-            <span>Interested volunteers are encouraged to participate in becoming weekly mentors.  They will be assigned a child and expected to volunteer two hours each week at our Learning Centers at Delmont Plaza Apartments or at our new </span>
-            <span>Highland Park Learning Center.  Each mentor works with his or her child for a two-hour session between 3:00 p.m. and 6:00 p.m from September through early June.  Mentors provide emotional encouragement, homework </span>
-            <span>assistance, and read with the children daily.  Mentors are asked to make at least a one-year commitment.  Our need for volunteer mentors is ongoing.</span>
-          </p><br>
-          <p>
-            <span>During our six-week summer program, mentoring opportunities are available Monday-Wednesday from 9:00am-3:00pm or join our summer team as a full-time summer intern.</span>
-            <span>Contact Mentor Coordinator for more information: <mailto:mentor@ylfr.org>mentor@ylfr.org</span><br>
           </p>
-          <p><a class="btn btn-primary btn-lg" href="https://s3-us-west-2.amazonaws.com/ylfr/forms/MentorVolunteerApplication.doc" role="button">Download Volunteer Form &raquo;</a></p>
-        </div>
-      </div>
-      <div class="row featurette">
-        <div class="col-md-6">
-          <h2 class="featurette-heading">Guest Speakers</h2>
-          <p>
-            <span>Fun Fridays are an opportunity for the children at the Learning Center to learn about various careers, participate in educational or sports activities, and generally, expand their knowledge of what they can do in the world.  Many </span>
-            <span>different speakers visit the Learning Center to share with the children about their profession and provide a hands-on activity related to their skill.  We welcome guest speakers who would either visit our center or invite the children on </span>
-            <span>a field trip to their place of work. Contact Mentor Coordinator for more information: mentor@ylfr.org.</span>
-          </p> 
        </div>
       </div>
 
