--- a/directors_message.html
+++ b/directors_message.html
@@ -69,46 +69,37 @@
           <img class="featurette-image img-responsive" src="https://s3-us-west-2.amazonaws.com/ylfr/ylfr_logo.jpg" alt="Donate image">
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">Ways to Give</h2>
-          <p class="lead">Become an ongoing financial partner or make a donation via Paypal or a check made out to "Youth Life Foundation of Richmond.</p>
-          <p><a class="btn btn-primary btn-lg" href="donate.html" role="button">Donate &raquo;</a></p>
+          <h2 class="featurette-heading">Our Mission</h2>
+          <p class="lead">To operate Learning Centers to develop leaders by making long-term investments in children from at-risk communities.</p>
         </div>
       </div>
       <div class="row featurette">
         <div class="col-md-6">
-          <h2 class="featurette-heading">Matching Programs</h2>
+          <h2 class="featurette-heading">Directors Message</h2>
+          <h4>Letter from the Director</h4>
           <p>
-            <span>Every donation amount is welcome and appreciated.  Thank you for partnering with us to provide a brighter future for children in at-risk communities.  You can also give through our employee matching partners:</span></p>
-            <span>Central Virginia Area Combined Federal Campaign - Our Code #79417</span><br>
-            <span>Local Government and Schools United Way Campaign - YLFR 393 Code</span><br>
-            <span>Dominion Foundation Matching Gift Program</span><br>
-            <span>Microsoft Matching Gift Program</span><br>
-            <span>Bank of America Employee Giving Program</span><br>
-          </p>
+            <span>Dear Team,</span><br>
+            <span></span><br>
+            <span>Happy Thankgiving!  I feel like I have a lot to be thankful for this year.  My family now lives in a beautiful home in the Northside on the same street as a </span>
+            <span>fellow board memeber and friend and three students from the newest Learning Center.  My commute is .3 mile to the office, LC Remix </span>
+            <span>and new Northminster Learning Center.  The Delmont Learning Center is .5 mile away and Highland Park is a mere mile!  This new </span>
+            <span>location has allowed us to minister more effectively and my husband is able to mentor one of our neighbors at the Northminster Learning Center.</span><br>
+            <span></span><br>
+            <span>I am so thankful for each of you who teach, mentor, give, pray, and otherwise help YLFR function and grow.  Because of many of you we have seen 20 students </span>
+            <span>added to the nearly 100 students who have come through YLFR doors this past year.  We have 5 full time, 4 part time, and 1 wonderful </span>
+            <span>AmeriCorp Volunteer Coordinator who make sure our programs run smoothly every day.  Please continue to pray, volunteer and give so </span>
+            <span>that we can continue to see lives change for enternity here in Richmond!</span><br>
+            <span></span><br>
+            <span>Heather Goodlett</span><br>
+            <span>Executive Director</span><br>
+            <span>Youth Life Foundation of Richmond</span><br>
+          <p>
+          <img class="featurette-image img-responsive" src="https://s3-us-west-2.amazonaws.com/ylfr/kids_group_photo.jpg" alt="Group Photo">
         </div>
         <div class="col-md-6">
-          <h2 class="featurette-heading">Mentor a Child</h2>
           <p>
-            <span>Interested volunteers are encouraged to participate in becoming weekly mentors.  They will be assigned a child and expected to volunteer two hours each week at our Learning Centers at Delmont Plaza Apartments or at our new </span>
-            <span>Highland Park Learning Center.  Each mentor works with his or her child for a two-hour session between 3:00 p.m. and 6:00 p.m from September through early June.  Mentors provide emotional encouragement, homework </span>
-            <span>assistance, and read with the children daily.  Mentors are asked to make at least a one-year commitment.  Our need for volunteer mentors is ongoing.</span>
-          </p><br>
-          <p>
-            <span>During our six-week summer program, mentoring opportunities are available Monday-Wednesday from 9:00am-3:00pm or join our summer team as a full-time summer intern.</span>
-            <span>Contact Mentor Coordinator for more information: <mailto:mentor@ylfr.org>mentor@ylfr.org</span><br>
           </p>
-          <p><a class="btn btn-primary btn-lg" href="https://s3-us-west-2.amazonaws.com/ylfr/forms/MentorVolunteerApplication.doc" role="button">Download Volunteer Form &raquo;</a></p>
-        </div>
-      </div>
-      <div class="row featurette">
-        <div class="col-md-6">
-          <h2 class="featurette-heading">Guest Speakers</h2>
-          <p>
-            <span>Fun Fridays are an opportunity for the children at the Learning Center to learn about various careers, participate in educational or sports activities, and generally, expand their knowledge of what they can do in the world.  Many </span>
-            <span>different speakers visit the Learning Center to share with the children about their profession and provide a hands-on activity related to their skill.  We welcome guest speakers who would either visit our center or invite the children on </span>
-            <span>a field trip to their place of work. Contact Mentor Coordinator for more information: mentor@ylfr.org.</span>
-          </p> 
-       </div>
+         </div>
       </div>
 
       <hr class="featurette-divider">
