--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="index.html">About</a></li>
+                <li><a href="about.html">About</a></li>
 
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="donate.html">Donate</a></li>
@@ -72,9 +72,9 @@
         </div>
         <div class="col-md-6">
           <h3>General Inquiries</h3>
-          <p>Youth Life Foundation of Richmond</p>
-          <p>Send all mail to:</p>
-          <p>P.O. Box 15202</p>
+          <p>Youth Life Foundation of Richmond<br>
+          <span>Send all mail to:</span><br>
+          <span>P.O. Box 15202</span></p>
         </div>
       </div>
       <div class="row">
@@ -136,23 +136,23 @@
         <div class="col-md-6">
           <h3>Key Contacts</h3>
           <h4>Founder and Executive Director</h4>
-          <p>Heather Goodlett</p>
-          <p><a href="mailto:hgoodlett@ylfr.org">hgoodlett@ylfr.org</a><p>
+          <p>Heather Goodlett<br>
+          <span><a href="mailto:hgoodlett@ylfr.org">hgoodlett@ylfr.org</a></span></p>
           <br>
           <h4>Volunteer Coordinator</h4>
-          <p>mentor@ylfr.org</p>
+          <p><a href="mailto:mentor@ylfr.org">mentor@ylfr.org</a></p>
           <br>
           <h4>Delmont Program Director</h4>
           <p>Whitney Prusek<br>
           <a href="mailto:wprusek@ylfr.org">wprusek@ylfr.org</a></p>
           <br>
           <h4>Highland Park Program Director</h4>
-          <p>Leahna Sullilvan</p>
-          <p>lsullivan@ylfr.org</p>
+          <p>Leahna Sullilvan<br>
+          <span><a href="mailto:lsullivan@ylfr.org">lsullivan@ylfr.org</a></span></p>
           <br>
           <h4>LC Remix Program Director</h4>
-          <p>Katharine Hunt</p>
-          <p>khunt@ylfr@org<p>
+          <p>Katharine Hunt<br>
+          <span><a href="mailto:khunt@ylfr.org">khunt@ylfr.org</a></span></p>
         </div>
       </div>
 
